| Summary: | ASTERISK-28773: Incorrect Sender SSRC in RTCP when p2p rtp bridge is active | ||||
| Reporter: | Torrey Searle (tsearle) | Labels: | |||
| Date Opened: | 2020-03-06 10:11:33.000-0600 | Date Closed: | 2021-02-19 01:42:31.000-0600 | ||
| Priority: | Major | Regression? | |||
| Status: | Closed/Complete | Components: | Resources/res_rtp_asterisk | ||
| Versions: | 13.28.1 | Frequency of Occurrence | Constant | ||
| Related Issues: |
| ||||
| Environment: | Attachments: | ||||
| Description: | When 2 channels are bridged in asterisk using the p2p bridge. Asterisk forwards rtp packets from one leg to another without modifying the SSRC. However asterisk currently doesn't update the bridged rtp instance with this new SSRC, so when RTCP is being generated it, the SSRC in the RTCP packets does not match the SSRC currently in use | ||||
| Comments: | By: Asterisk Team (asteriskteam) 2020-03-06 10:11:34.481-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Friendly Automation (friendly-automation) 2020-03-12 10:33:16.614-0500 Change 13859 merged by George Joseph: res_rtp_asterisk: Send correct sender SSRC when p2p bridge in use [https://gerrit.asterisk.org/c/asterisk/+/13859|https://gerrit.asterisk.org/c/asterisk/+/13859] By: Friendly Automation (friendly-automation) 2020-03-12 10:33:27.815-0500 Change 13924 merged by George Joseph: res_rtp_asterisk: Send correct sender SSRC when p2p bridge in use [https://gerrit.asterisk.org/c/asterisk/+/13924|https://gerrit.asterisk.org/c/asterisk/+/13924] By: Friendly Automation (friendly-automation) 2020-03-12 10:33:42.537-0500 Change 13925 merged by George Joseph: res_rtp_asterisk: Send correct sender SSRC when p2p bridge in use [https://gerrit.asterisk.org/c/asterisk/+/13925|https://gerrit.asterisk.org/c/asterisk/+/13925] By: Friendly Automation (friendly-automation) 2020-03-12 10:34:17.952-0500 Change 13926 merged by George Joseph: res_rtp_asterisk: Send correct sender SSRC when p2p bridge in use [https://gerrit.asterisk.org/c/asterisk/+/13926|https://gerrit.asterisk.org/c/asterisk/+/13926] By: Asterisk Team (asteriskteam) 2021-02-19 01:40:26.731-0600 This issue has been reopened as a result of your commenting on it as the reporter. It will be triaged once again as applicable. | ||||